apps/churchlify/pay/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churchlify-pay
  namespace: churchlify
spec:
  selector:
    app: churchlify-pay
  ports:
  - port: 80
    targetPort: 3000
